<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addRoom"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/texts"

                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/login"
                android:fontFamily="cursive"
                android:paddingVertical="70dp"
                android:text="@string/addRm"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="30sp" />

            <TextView
                style="@style/texts"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/title"
                android:textColor="#cdaf95"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/texts"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="25dp"
                android:text="@string/price"
                android:textColor="#cdaf95"
                android:textSize="20sp"
                tools:ignore="InvalidId" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp" />

            <TextView
                style="@style/texts"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="30dp"
                android:text="@string/NumBed"
                android:textColor="#cdaf95"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Numbed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword" />

            <TextView
                style="@style/texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/floor"
                android:textColor="#cdaf95"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/floorNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:inputType="phone" />








            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/description"
                style="@style/texts"

                android:textColor="#cdaf95"

                android:textSize="20sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_login"
                style="@style/TextAppearance"
                android:text="@string/addRm"
                android:onClick="btnH"                 />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text1"
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
